--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body onload="main()">
     <h1>Aknekereső</h1>
-    <div id="xc"></div>
+    <div oncontextmenu="h(event)" id="xc"></div>
     <div id="ny"></div>
 </body>
 </html>
